[tool.poetry]
name = "machine-learning-pipeline-examples"
version = "0.1.0"
description = ""
authors = ["koroku1023 <h1023skoroku@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_pipeline_examples"}]

[tool.poetry.dependencies]
python = "3.10.10"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
xgboost = "^1.7.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
